# C-Cpp

./: CMakeLists.txt  Casino.cpp  Det of Matrix.cpp  Fifth lesson.cpp  Financial exersize.cpp  Finding The Greatest Common Factor.cpp  First lesson.cpp  Fourth lesson.cpp  Generator Of Random Numbers.cpp  Project9.sln  Project9.vcxproj  Project9.vcxproj.filters  README.md  Repetitive words.cpp  Second lesson.cpp  Shell's Sort.cpp  Sixth lesson(Calculator).cpp  Sort algorithms.cpp  Sorting algorithms.cpp  Third lesson.cpp  learning.cmake  repetitive wordsV2.cpp  structs.cpp  two-dimensional_array.cpp
Algorithms/: Binary_search.cpp  Linear Search.cpp  way.cpp
Algorithms/Ant_algo/: ant_alg.cpp
Algorithms/Binary_Search_Tree/: README.md
Algorithms/Containers/: List_algorithm.hpp  Stack_algorithm.hpp  array.hpp  dara_interface.hpp  matrix_algoritms.cpp
Algorithms/DifferentialEquation/: main.cpp
Algorithms/Dijkstra’s algorithm/: CMakeLists.txt  Dijkstra’s algorithm.cpp
Algorithms/Gradient Descent/: Gradient Descent.cpp
Algorithms/Graph/: main.cpp
Algorithms/RSA/: CMakeLists.txt  main.cpp
Algorithms/SHA-1/: CMakeList.txt  main.cpp  sha1.hpp  sha1_loc.h
Algorithms/SHA-256/: CMakeLists.txt
Algorithms/Searchs/: Jump_Search.cpp
Algorithms/Simple_XOR_Shiphre/: CMakeLists.txt  main.cpp
Algorithms/Sockets/: tcp_client.cpp  tcp_server.cpp
Algorithms/Sorts/: Comb_Sort.cpp  Imolement_Topological_Sort.cpp  Insertion Sort.cpp  Selection_Sort.cpp  Sorting algorithms.cpp
CMake/: CMakeLists.txt  learning.cmake
C_Algos/Sorts/: Bubble_Sort.c  Buket_sort.c  CMakeList.txt  Recursion_Bubble_Sort.c
C_Algos/searching/: binary_search.c  exponential_search.c  fibonacci_search.c  floyd_cycle_detection_algorithm.c  interpolation_search.c  jump_search.c  modified_binary_search.c  sentinel_linear_search.c  ternary_search.c
ConsoleFPS/: main.cpp
ConsoleFPS/src/: main.cpp
Console_Casino/: CMakeLists.txt  Casino.cpp
Dino/: Dino.cpp
Donut/: MVS.cpp
Donut/src/: CMakeLists.txt
Dynamic_Struct_Of_Data/: DoubleLinkedList.cpp  SinglyLinkedList.cpp
GTK/: DrawFunctions.cpp  DrawFunctions.h  DrawHelper.h  Figures.cpp  Figures.h  IFigures.cpp  IFigures.h  README.md  Window.h  WindowNotify.cpp  WindowNotify.h  main.cpp
GTK/ShapesGTK/: DrawFunctions.cpp  DrawFunctions.h  DrawHelper.h  Figures.cpp  Figures.h  IFigures.h  Window.h  WindowNotify.cpp  WindowNotify.h
Git_files/: .gitignore
Glut/: CMakeList.txt  main.cpp  mainscene.h  mainscience.cpp
JSON_Parser/json_parser/: CMakeLists.txt  test.json
JSON_Parser/json_parser/include/: jsonparser.h  jsontree.h  symbols.h
JSON_Parser/json_parser/src/: jsonparser.cpp  jsontree.cpp  main.cpp
LabsKemSU/: Reame.md
MP3Encoder/: CMakeLists.txt  README.md
MP3Encoder/src/: ParallelEncoder.cpp
Multithreading/: main.cpp
Neuro_Net/: Neuro_Net.cpp
Neuro_Net/ml/: CMakeList.txt
Neuro_Net/net/: main.cpp  myneuro.cpp  myneuro.h
OpenGL/: main.cpp  readme.md
OpenGL/Minesweapper/: main.cpp
OpenGL/Vulkan/First/src/: CMakeLists.txt  main.cpp
Open_CV/: main.cpp
Pacman/: CMakeLists.txt  README.md  main.cpp
Paint/: Dot.h  Makefile  main.cpp
Pictures/: PixsMerging.cpp  PixsMerging.vcxproj  lodepng.h
Pictures/lib/: coding.h  picturesMerger.h
Qt_5/: window.cpp
Qt_5/Ant_Algos/: README.md  colonie.cpp  colonie.h  instance.cpp  interface.h  main.cpp
Qt_5/Labirinth/: Labirinth.cpp  README.md
Qt_5/Neuro_net/: ActivateFunction.h  Matrix.h  NetWork.h  PaintScene.cpp  PaintScene.h  PaintScene.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.txt
Qt_5/PaintQt5/: mainwindow.cpp  mainwindow.h  scribblearea.cpp  scribblearea.h
Qt_5/Qt_Video player/: ShizPlayer.pro  fileheader.h  (+4 more)
SFML/Pacman/src/: CMakeLists.txt  main.cpp
ServerGame/: CMakeLists.txt  README.md  conanfile.txt
ServerGame/src/: CMakeLists.txt  account.cpp  account.hpp  models.hpp  storage.hpp  tmp.cpp
ServerGame/test/: CMakeLists.txt  account.cpp  server.cpp  test_data.hpp
Simple_Programs/: Fifth lesson.cpp  Financial exersize.cpp  Fourth lesson.cpp  Repetitive_words.cpp  Second lesson.cpp  Sixth lesson(Calculator).cpp  my_diff.cpp  repetitive wordsV2.cpp  structs.cpp
Snake_C/: Makefile  snake.c
TUIMenu/: CMakeLists.txt  conanfile.txt  main.cpp
TUIMenu/docs/: CMakeLists.txt  Doxyfile.in  README.md
TUIMenu/examples/ads-l1-v3/: CMakeLists.txt  app.hpp  container.hpp  main.cpp
TUIMenu/examples/ads-l1-v5/: CMakeLists.txt  README.md  app.hpp  container.hpp  main.cpp
TUIMenu/include/tui-menu/: inputwindow.hpp  mainwindow.hpp  navwindow.hpp  tui.hpp  types.hpp  validators.hpp  windowbase.hpp
TUIMenu/src/tui-menu/: validators.cpp
Table_of_encoding/: CMakeLists.txt  Codetable.cpp  Codetable.h  main.cpp
Tg-Bot/: CMakeLists.txt  conanfile.txt
Tg-Bot/include/: command.hpp  command_handlers.hpp  router.hpp
Tg-Bot/src/: command_handlers.cpp  main.cpp  router.cpp
Travel/: main.cpp
VidToASCII/: main.cpp  ytDownload.py
layout_domino_async/: FileWriter.h
(+97 files in other folders)
